--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,22 @@
-<p>post-page works!</p>
+<div class="post">
+    <div class="header">
+        <h2>Post title</h2>
+        <button 
+            routerLink="/" 
+            class="btn btn-link"
+        >Main page</button>
+    </div>
+
+    <div class="info">
+        <strong>Author</strong>
+        <small>12.10.2020</small>
+    </div>
+
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga, atque repellendus facilis odit magnam, laborum voluptatibus itaque in hic ipsa consectetur quasi perspiciatis doloribus rem aspernatur! Quasi deleniti, vero quibusdam maiores quis labore autem rem voluptate dolorem esse explicabo iusto eveniet natus eum? Illum accusantium eum beatae earum corrupti.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga, atque repellendus facilis odit magnam, laborum voluptatibus itaque in hic ipsa consectetur quasi perspiciatis doloribus rem aspernatur! Quasi deleniti, vero quibusdam maiores quis labore autem rem voluptate dolorem esse explicabo iusto eveniet natus eum? Illum accusantium eum beatae earum corrupti.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga, atque repellendus facilis odit magnam, laborum voluptatibus itaque in hic ipsa consectetur quasi perspiciatis doloribus rem aspernatur! Quasi deleniti, vero quibusdam maiores quis labore autem rem voluptate dolorem esse explicabo iusto eveniet natus eum? Illum accusantium eum beatae earum corrupti.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga, atque repellendus facilis odit magnam, laborum voluptatibus itaque in hic ipsa consectetur quasi perspiciatis doloribus rem aspernatur! Quasi deleniti, vero quibusdam maiores quis labore autem rem voluptate dolorem esse explicabo iusto eveniet natus eum? Illum accusantium eum beatae earum corrupti.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt fuga, atque repellendus facilis odit magnam, laborum voluptatibus itaque in hic ipsa consectetur quasi perspiciatis doloribus rem aspernatur! Quasi deleniti, vero quibusdam maiores quis labore autem rem voluptate dolorem esse explicabo iusto eveniet natus eum? Illum accusantium eum beatae earum corrupti.</p>
+    </div>
+</div>
