--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -6,6 +6,20 @@
     <h2>Login to Admin panel:</h2>
 
     <div 
+        class="alert alert-danger"
+        *ngIf="auth.error$ | async as error"
+    >
+        {{ error }}
+    </div>
+
+    <div 
+        class="alert alert-info"
+        *ngIf="message"
+    >
+        {{ message }}
+    </div>
+
+    <div 
         class="form-control"
         [ngClass]="{invalid: form.get('email').touched && form.get('email').invalid}"    
     >
@@ -48,7 +62,7 @@
     <button 
         type="submit" 
         class="btn btn-primary"
-        [disabled]="form.invalid"
+        [disabled]="form.invalid || submitted"
         >Login</button>
         
 </form>
