--- a/src/app/admin/create-page/create-page.component.html
+++ b/src/app/admin/create-page/create-page.component.html
@@ -1,1 +1,51 @@
-<p>create-page works!</p>
+<form 
+    [formGroup]="form" 
+    (ngSubmit)="submit()"
+>
+    <h1>New Post</h1>
+
+    <div 
+        class="form-control"
+        [ngClass]="{invalid: form.get('title').touched && form.get('title').invalid}"    
+    >
+        <label for="title">Post title:</label>
+        <input type="text" id="title" formControlName="title">
+        <div 
+            class="validation"
+            *ngIf="form.get('title').touched && form.get('title').invalid"
+        >
+            <small *ngIf="form.get('title').errors.required">
+                Title cannot be empty.
+            </small>
+        </div>
+    </div>
+
+    <div class="form-control">
+        <label>Post content:</label>
+        <quill-editor
+            formControlName="text"
+        ></quill-editor>
+    </div>
+
+    <div 
+        class="form-control"
+        [ngClass]="{invalid: form.get('author').touched && form.get('author').invalid}"    
+    >
+        <label for="author">Author name:</label>
+        <input type="text" id="author" formControlName="author">
+        <div 
+            class="validation"
+            *ngIf="form.get('author').touched && form.get('author').invalid"
+        >
+            <small *ngIf="form.get('author').errors.required">
+                Title cannot be empty.
+            </small>
+        </div>
+    </div>
+
+    <button
+        type="submit"
+        class="btn btn-block btn-dark"
+        [disabled]="form.invalid"
+    >Create post</button>
+</form>
